# src/DPWH.EDMS.Application/Models/RecordTypeMappings/CreateRecordTypeMappingModel.cs
@@ -1,10 +1,0 @@
-﻿using DPWH.EDMS.Application.Models;
-
-namespace DPWH.EDMS.Application;
-
-public class CreateRecordTypeMappingModel
-{
-    public Guid DataLibraryId { get; private set; }
-    public string Division { get; private set; }
-    public string Section { get; private set; }
-}
