# src/DPWH.EDMS.Application/Models/RecordTypeMappings/UpdateRecordTypeMappingModel.cs
@@ -1,8 +1,0 @@
-﻿namespace DPWH.EDMS.Application;
-
-public class UpdateRecordTypeMappingModel
-{
-    public Guid DataLibraryId { get; private set; }
-    public string Division { get; private set; }
-    public string Section { get; private set; }
-}
