# src/DPWH.EDMS.Application/Models/RecordTypes/CreateRecordTypeModel.cs
@@ -1,0 +1,5 @@
+﻿using DPWH.EDMS.Application.Models;
+
+namespace DPWH.EDMS.Application;
+
+public record class CreateRecordTypeModel(Guid DataLibraryId, string Division, string Section);
